--- a/app/layout.module.scss
+++ b/app/layout.module.scss
@@ -1,7 +1,6 @@
 .container {
     display: flex;
     width: 100%;
-    max-height: 100%;
     margin-bottom: 133px;
 }
 
@@ -10,21 +9,28 @@
     bottom: 0;
     width: 100%;
 }
-    
+
 .burgerMenu {
     display: none;
-    height: 100%;
-    position: absolute;
-    z-index: 100;
-    top: 45px;
-    left: 10px;
 }
 
-@media screen and (min-width: 300px) and (max-width: 1023px) {
+.ordynaryMenu {
+    display: flex;
+}
+
+@media screen and (max-width: 375px) {
+    .ordynaryMenu {
+        display: none;
+    }
+}
+
+@media screen and (min-width: 375px) and (max-width: 744px) {
     .burgerMenu {
-        display: block;
         display: flex;
-        left: 0;
+        position: absolute;
+        left: 25px;
+        top: 44px;
+        z-index: 1;
     }
 
     .ordynaryMenu {
