--- a/app/playlists/page.module.scss
+++ b/app/playlists/page.module.scss
@@ -108,6 +108,8 @@
     .tabletBurgercursos {
         display: flex;
         cursor: pointer;
+        position: absolute;
+
     }
 
     .newPlaylist {
